--- a/windows/PhotobookNet/TableContentPage.xaml
+++ b/windows/PhotobookNet/TableContentPage.xaml
@@ -96,6 +96,8 @@
                                     <MenuFlyoutItem Text="Other"
                                                     IsEnabled="False" />
                                 </MenuFlyoutSubItem>
+                                <MenuFlyoutItem Text="Properties"
+                                                Click="OnPropertiesClicked" />
                                 <MenuFlyoutSeparator />
                                 <MenuFlyoutItem Text="Exit"
                                                 Click="OnExitClicked" />
@@ -619,6 +621,15 @@
                          Height="20"
                          Margin="20,0,0,0" />
         </Grid>
+        <ContentDialog x:Name="PropertiesContentDialog"
+                       Title="Properties"
+                       PrimaryButtonText="Ok"
+                       Foreground="{StaticResource MainFontColor}"
+                       Background="{StaticResource PrimaryColor}">
+            <TextBlock x:Name="PropertiesContentTextBlock"
+                       HorizontalAlignment="Left"
+                       TextWrapping="WrapWholeWords" />
+        </ContentDialog>
         <ContentDialog x:Name="ExportContentDialog"
                        Title="Export Photobook"
                        Foreground="{StaticResource MainFontColor}"
