ui: Improve Primary new project button color.

--- a/windows/PhotobookNet/ColorScheme.xaml
+++ b/windows/PhotobookNet/ColorScheme.xaml
@@ -48,12 +48,12 @@
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="BorderElement"
                                                                        Storyboard.TargetProperty="Background">
                                             <DiscreteObjectKeyFrame KeyTime="0"
-                                                                    Value="DarkBlue" />
+                                                                    Value="#2B4970" />
                                         </ObjectAnimationUsingKeyFrames>
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="BorderElement"
                                                                        Storyboard.TargetProperty="BorderBrush">
                                             <DiscreteObjectKeyFrame KeyTime="0"
-                                                                    Value="DarkBlue" />
+                                                                    Value="#2B4970" />
                                         </ObjectAnimationUsingKeyFrames>
                                     </Storyboard>
                                 </VisualState>
