--- a/windows/PhotobookNet/TableContentPage.xaml
+++ b/windows/PhotobookNet/TableContentPage.xaml
@@ -210,22 +210,26 @@
                     <AppBarButton Icon="Add"
                                   Label="Add Media"
                                   Width="32"
-                                  Foreground="{StaticResource CommandBarMainColor}"
+                                  VerticalAlignment="Center"
+                                  Style="{StaticResource AppBarButtonStyle}"
                                   Click="OnAddMediaClick" />
                     <AppBarButton x:Name="RemoveMediaAppBarButton"
                                   Icon="Delete"
                                   Label="Remove Media"
-                                  Foreground="{StaticResource CommandBarMainColor}"
+                                  VerticalAlignment="Center"
+                                  Style="{StaticResource AppBarButtonStyle}"
                                   Width="32"
                                   Click="OnImportFolderRemoved" />
                     <AppBarButton Icon="Save"
                                   Label="Save"
                                   Width="32"
-                                  Foreground="{StaticResource CommandBarMainColor}"
+                                  VerticalAlignment="Center"
+                                  Style="{StaticResource AppBarButtonStyle}"
                                   Click="OnSaveProject" />
                     <AppBarButton x:Name="PreviewAppBarButton"
                                   Label="Preview"
-                                  Foreground="{StaticResource CommandBarMainColor}"
+                                  VerticalAlignment="Center"
+                                  Style="{StaticResource AppBarButtonStyle}"
                                   Width="32">
                         <AppBarButton.Icon>
                             <FontIcon Glyph="&#xE890;"
@@ -236,17 +240,20 @@
                                   Icon="ViewAll"
                                   Label="Collage"
                                   Width="32"
-                                  Foreground="{StaticResource CommandBarMainColor}"
+                                  VerticalAlignment="Center"
+                                  Style="{StaticResource AppBarButtonStyle}"
                                   Click="OnMakeCollageClick" />
                     <AppBarButton Icon="Send"
                                   Label="Export Album"
                                   Width="32"
-                                  Foreground="{StaticResource CommandBarMainColor}"
+                                  VerticalAlignment="Center"
+                                  Style="{StaticResource AppBarButtonStyle}"
                                   Click="OnExportClicked" />
                     <AppBarButton Icon="Help"
                                   Label="Help"
                                   Width="32"
-                                  Foreground="{StaticResource CommandBarMainColor}"
+                                  VerticalAlignment="Center"
+                                  Style="{StaticResource AppBarButtonStyle}"
                                   Click="OnAboutClicked" />
                 </CommandBar>
                 <controls:TabView x:Name="CentralTabView"
